before adding new github

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,7 @@
 
     <div class="hero-media" aria-hidden="true">
         <img src="{% static 'media/bg2.webp' %}" alt="Smiling dentist with patient" loading="lazy" decoding="async">
+        <img src="{% static 'media/bg3.webp' %}" alt="Child Dentistry" loading="lazy" decoding="async">
     </div>
 </section>
 
