after port push

--- a/templates/index.html
+++ b/templates/index.html
@@ -381,13 +381,13 @@
                 <h4>Follow Us</h4>
                 <div class="social-links">
                     <a href="#" class="social-link" aria-label="Facebook">f</a>
-                    <a href="#" class="social-link" aria-label="Instagram">📷</a>
+                    <a href="https://www.instagram.com/le.puli.hq/" class="social-link" aria-label="Instagram">📷</a>
                     <a href="#" class="social-link" aria-label="Twitter">𝕏</a>
-                    <a href="#" class="social-link" aria-label="WhatsApp">💬</a>
+                    <a href="https://wa.me/918778392763" class="social-link" aria-label="WhatsApp">💬</a>
                 </div>
                 <div class="footer-hours">
                     <p><strong>Clinic Hours</strong></p>
-                    <p>Mon - Sat: 9:00 AM - 7:00 PM</p>
+                    <p>Mon - Sat: 9:00 AM - 5:00 PM</p>
                     <p>Sunday: 10:00 AM - 2:00 PM</p>
                     <p class="emergency">24/7 Emergency: +91 90425 58720</p>
                 </div>
